Fix project links bug (#12)
* Revert "fix: Projects overlaying navbar"

This reverts commit 2c7ec4d68e168652a6921cdf3678a88ef0ccfb64.

* fix: Projects overlap navbar

--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,7 @@ textarea {
 .menu-button,
 .nav-list {
   position: fixed;
+  z-index: 1;
 }
 
 .nav-item {
@@ -229,7 +230,6 @@ textarea {
   justify-content: space-between;
   padding: 0.8rem;
   margin: 6rem auto;
-  z-index: -1;
 }
 
 .project::after {
